src/test/ui/suggestions/suggest-closure-return-type-3.rs
fn main() {
    let _v = || []; //~ ERROR type annotations needed for the closure
}
